# spectral_12-9-22

./: .gitattributes  .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts  versions.properties
api/: build.gradle.kts
bootstrap/: .gitignore  Cargo.toml  build.gradle.kts  build.rs  toolchain.toml
bootstrap/src/: jvm_loader.rs  lib.rs
bootstrap/src/sdk/: mod.rs  osrs.rs
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: JvmWrapperPlugin.kt  jni-library.gradle.kts
client/: build.gradle.kts
client/src/main/resources/: tinylog.properties
client/src/main/resources/themes/: spectral.theme.json
common/: build.gradle.kts
engine/: build.gradle.kts
launcher/: .gitignore  build.gradle.kts
launcher/src/main/resources/: tinylog.properties
launcher/src/main/resources/themes/: default.css  spectral.css
launcher/updater/: build.gradle.kts
logger/: build.gradle.kts
logger/src/main/resources/: tinylog.properties
natives/: build.gradle.kts
natives/cpp/: build.gradle.kts
natives/cpp/src/main/cpp/: common.h  main.cpp
natives/cpp/src/main/cpp/core/: NativeCanvas.cpp  NativeCanvas.h
natives/cpp/src/main/cpp/sdk/: osrs.cpp  osrs.h
natives/cpp/src/main/cpp/spectral/: NativeCanvas.cpp  Spectral.cpp  Spectral.h
natives/cpp/src/main/cpp/util/: util.h
natives/cpp/src/main/lib/: Zycore.lib  Zydis.lib  asmjit.lib  capstone.lib
natives/jvm/: build.gradle.kts
natives/memory/: build.gradle.kts
natives/offset/: build.gradle.kts
plugin/: build.gradle.kts
plugin-gradle/: build.gradle.kts  settings.gradle.kts
plugin/testplugin1/: build.gradle.kts
runescape-api/: build.gradle.kts
spectral-cpp/: CMakeLists.txt
spectral-cpp/src/: common.h  main.cpp
spectral-cpp/src/api/: WindowEmbed.cpp  WindowEmbed.h
spectral-cpp/src/util/: util.h
spectral-cpp/src/util/logger/: logger.hpp
util/: build.gradle.kts
(+203 files in other folders)
