[package]
name = "bootstrap"
version = "1.0.0"
edition = "2018"
build = "build.rs"

[lib]
name = "bootstrap"
crate-type = ["cdylib"]
required-features = ["macros"]

[dependencies]
winapi = { version = "0.3.9", features = ["everything"] }
mem = { git = "https://github.com/spectralpowered/mem-rs/", branch = "master" }
log = "0.4.14"
simple_logger = "2.1.0"
rucaja = "0.4.5"
jni = "0.19.0"
jni-sys = "0.3.0"
jni_fn = "0.1.0"
dirs = "4.0.0"

[build-dependencies]
dirs = "4.0.0"